# tictactoe

./: .gitignore  README.md  TODO.md  tictactoe.code-workspace
.github/workflows/: deploy.yml
backend/: Cargo.toml  Dockerfile
backend/src/: game.rs
backend/src/server/: lobby.rs  messages.rs  mod.rs  realtime.rs  session.rs  state.rs  tests.rs
backend/src/server/tests/: lobby.rs  messages.rs  mod.rs  session.rs  state.rs  utils.rs
frontend/: Dockerfile  deno.json  fresh.config.ts  fresh.gen.ts
frontend/components/: Footer.tsx  types.tsx
frontend/islands/: Board.tsx  Game.tsx  Lobby.tsx
frontend/lib/: Game.tsx  types.tsx
frontend/routes/: index.tsx
frontend/static/: logo.pxd
frontend/tailwind/: compiler.ts  custom_tailwind.ts
