[package]
name = "tictactoe"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"   # for accessing secret values
futures = "0.3.30"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"

# web and server related dependencies
tokio = { version = "1.39.3", features = ["full"] }
axum = { version = "0.7.5", features = ["ws"]}
tower = { version = "0.5.0", features = ["limit", "buffer"]}
tower-http = { version = "0.5.2", features = ["limit", "timeout"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
http-body-util = "0.1.2"

[[bin]]
name = "server"
path = "src/server.rs"

[lib]
name = "game"
path = "src/game.rs"