[package]
name = "tictactoe"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"   # for accessing secret values
futures = "0.3.30"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
rand = "0.8.5"

# web and server related dependencies
tokio = { version = "1.39.3", features = ["full"] }
axum = { version = "0.8.1", features = ["ws"]}
tower = "0.5.0"
tower-http = "0.5.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
http-body-util = "0.1.2"

[[bin]]
name = "server"
path = "src/server/mod.rs"

[lib]
name = "game"
path = "src/game.rs"